Tue Aug 30 14:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Kokyu_dsrt_schedulers/EDF_Scheduler.cpp
        * examples/Kokyu_dsrt_schedulers/FP_Scheduler.cpp
        * examples/Kokyu_dsrt_schedulers/MIF_Scheduler.cpp
        * examples/Kokyu_dsrt_schedulers/MUF_Scheduler.cpp
        * examples/RTCORBA/Activity/Activity.cpp
        * examples/RTCORBA/Activity/Task_Stats.cpp
        * orbsvcs/Concurrency_Service/Concurrency_Service.cpp
        * orbsvcs/Event_Service/Event_Service.cpp
        * orbsvcs/FTRT_Event_Service/Event_Service/FT_EventService.cpp
        * orbsvcs/FTRT_Event_Service/Factory_Service/FTRTEC_Factory_Service.cpp
        * orbsvcs/FTRT_Event_Service/Gateway_Service/FTRTEC_Gateway_Service.cpp
        * orbsvcs/LifeCycle_Service/LifeCycle_Service.cpp
        * orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.cpp
        * orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.cpp
        * orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp
        * orbsvcs/Naming_Service/Naming_Server.cpp
        * orbsvcs/Naming_Service/Naming_Service.cpp
        * orbsvcs/Notify_Service/Notify_Server.cpp
        * orbsvcs/Notify_Service/Notify_Service.cpp
        * orbsvcs/Scheduling_Service/Scheduling_Service.cpp
        * orbsvcs/Time_Service/Clerk_i.cpp
        * orbsvcs/Time_Service/Server_i.cpp
        * orbsvcs/Trading_Service/Trading_Service.cpp
        * orbsvcs/examples/Notify/Lanes/Consumer_Client.cpp
        * orbsvcs/examples/Notify/Lanes/Supplier_Client.cpp
        * orbsvcs/examples/Notify/ThreadPool/Consumer_Client.cpp
        * orbsvcs/examples/Notify/ThreadPool/Supplier_Client.cpp
        * orbsvcs/orbsvcs/Scheduler_Factory.cpp
        * orbsvcs/orbsvcs/CosEvent/CEC_Default_Factory.cpp
        * orbsvcs/orbsvcs/CosEvent/CEC_Event_Loader.cpp
        * orbsvcs/orbsvcs/Event/EC_Default_Factory.cpp
        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP_Factory.cpp