@@ -1,3 +1,9 @@
+Tue Aug 30 14:43:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
+
+        * docs/Options.html:
+          Added docu for new IPv6 specific options (ORBPreferIPV6Interfaces and
+          ORBConnectIPV6Only).
+
 Tue Aug 30 14:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/Kokyu_dsrt_schedulers/EDF_Scheduler.cpp
